--- a/b-final.ipynb
+++ b/b-final.ipynb
@@ -87,11 +87,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, what is your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " winsion\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello winsion !\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('Hi, what is your name?')\n",
+    "name = input()\n",
+    "print(f'Hello {name} !')"
    ]
   },
   {
@@ -103,11 +127,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " dafasf good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('How are you today?')\n",
+    "feeling = input()\n",
+    "\n",
+    "if 'good' in feeling:\n",
+    "    print(\"I'm feeling good too\")\n",
+    "\n",
+    "else:\n",
+    "    print('Sorry to hear that')"
    ]
   },
   {
@@ -119,11 +172,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('How are you today?')\n",
+    "feeling = input()\n",
+    "\n",
+    "if 'good' in feeling.lower():\n",
+    "    print(\"I'm feeling good too\")\n",
+    "\n",
+    "else:\n",
+    "    print('Sorry to hear that')"
    ]
   },
   {
@@ -135,11 +217,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " daf\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You like daf ? My favourite color is yellow\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "print(\"What's your favorite color?\")\n",
+    "favcolor = input()\n",
+    "colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "print(f'You like {favcolor} ? My favourite color is {random.choice(colors)}')"
    ]
   },
   {
@@ -191,11 +300,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import time\n",
+    "\n",
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "    \n",
+    "    def run(self):\n",
+    "        \n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self.q)\n",
+    "        self.a = input()\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self._think(self.a))"
    ]
   },
   {
@@ -214,29 +342,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.q = 'Hi, what is your name?'\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        return f\"Hello {s}\"\n",
+    "\n",
+    "         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class GreetingBot(Bot):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = 'How are you today?'\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        if 'good' in self.a.lower():\n",
+    "            return \"I'm feeling good too\"\n",
+    "        else:\n",
+    "            return \"Sorry to hear that\"\n",
+    "            \n",
+    "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "class FavouriteColor(Bot):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = \"What's your favourite color?\"\n",
+    "        \n",
+    "    def _think(self,s):\n",
+    "        \n",
+    "        color = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "        return f'Your like {self.a.lower()} ? I like {random.choice(color)}'\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -252,11 +411,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Garfield:\n",
+    "    \n",
+    "    def __init__(self, wait = 1):\n",
+    "        Bot.wait = wait\n",
+    "        self.bots = []\n",
+    "        \n",
+    "    def add(self, bot):\n",
+    "        self.bots.append(bot)\n",
+    "        \n",
+    "    def _prompt(self, s):\n",
+    "        print(s)\n",
+    "        print()\n",
+    "        \n",
+    "    def run(self):\n",
+    "        self._prompt(\"This is Garfield dialog system. Let's talk.\")\n",
+    "        for bot in self.bots:\n",
+    "            bot.run()\n"
    ]
   },
   {
@@ -274,11 +449,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Garfield dialog system. Let's talk.\n",
+      "\n",
+      "Hi, what is your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " jim\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello jim\n",
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " sdfhsodfjgooddsafasf\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too\n",
+      "What's your favourite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " sdfsdfsd\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your like sdfsdfsd ? I like red\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield(1)\n",
+    "\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(GreetingBot())\n",
+    "garfield.add(FavouriteColor())\n",
+    "\n",
+    "garfield.run()"
    ]
   },
   {
@@ -320,11 +555,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "\n",
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "    \n",
+    "    def _format(self, s):\n",
+    "        return colored(s,'blue')\n",
+    "    \n",
+    "    def run(self):    \n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        self.a = input()\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self._think(self.a)))\n"
    ]
   },
   {
@@ -352,11 +609,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from simpleeval import simple_eval\n",
+    "\n",
+    "class CalcBot(Bot):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = \"Through recent upgrade I can do calculation now. Input some arithmetic expression to try:\"\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f'Done. Result = {result}.'"
    ]
   },
   {
@@ -368,11 +634,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Garfield dialog system. Let's talk.\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'HelloBot' object has no attribute '_run_once'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-68668bb6e68f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mgarfield\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mHelloBot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mgarfield\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCalcBot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mgarfield\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-7-14be604e2bd5>\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_prompt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"This is Garfield dialog system. Let's talk.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mbot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbots\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m             \u001b[0mbot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-2-9317ec4667ad>\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mruntype\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'once'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 35\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_run_once\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     36\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mruntype\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'looped'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_run_looped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'HelloBot' object has no attribute '_run_once'"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield(1)\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(CalcBot())\n",
+    "garfield.run()"
    ]
   },
   {
@@ -440,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,20 +751,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from random import choice\n",
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "from simpleeval import simple_eval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(self, runtype = 'once'):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "        self.runtype = runtype\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "    \n",
+    "    def _format(self, s):\n",
+    "        return colored(s,'blue')\n",
+    "    \n",
+    "    def _run_once(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        self.a = input()\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self._think(self.a)))\n",
+    "        \n",
+    "    def _run_looped(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        while True:\n",
+    "            self.a = input()\n",
+    "            sleep(Bot.wait)\n",
+    "            if self.a in ['q', 'x', 'exit', 'quit']:\n",
+    "                break\n",
+    "            print(self._format(self._think(self.a))) \n",
+    "    \n",
+    "    def run(self):\n",
+    "        if self.runtype == 'once':\n",
+    "            self._run_once()\n",
+    "        elif self.runtype == 'looped':\n",
+    "            self._run_looped()   "
    ]
   },
   {
@@ -485,29 +815,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self, runtype='once'):\n",
+    "        super().__init__(runtype)\n",
+    "        self.q = \"Hi, what is your name?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        return f\"Hello {s}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class GreetingBot(Bot):\n",
+    "    \n",
+    "    def __init__(self, runtype = 'once'):\n",
+    "        super().__init__(runtype)\n",
+    "        self.q = 'How are you today?'\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        if 'good' in self.a.lower():\n",
+    "            return \"I'm feeling good too\"\n",
+    "        else:\n",
+    "            return \"Sorry to hear that\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "class FavouriteColorBot(Bot):\n",
+    "    \n",
+    "    def __init__(self, runtype = 'once'):\n",
+    "        super().__init__(runtype)\n",
+    "        self.q = \"What's your favourite color?\"\n",
+    "        \n",
+    "    def _think(self,s):\n",
+    "        \n",
+    "        color = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "        return f'Your like {self.a.lower()} ? I like {random.choice(color)}'"
    ]
   },
   {
@@ -521,11 +878,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class CalcBot(Bot):\n",
+    "    def __init__(self, runtype = 'once'):\n",
+    "        super().__init__(runtype)\n",
+    "        self.q = \"Through recent upgrade I can do calculation now. Input some arithmetic expression to try, input 'q' 'x' 'quit' or 'exit' to quit:\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f\"Done. Result = {result}\"\n",
+    "    "
    ]
   },
   {
@@ -537,11 +902,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Garfield dialog system. Let's talk.\n",
+      "\n",
+      "\u001b[34mHi, what is your name?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " jim\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mHello jim\u001b[0m\n",
+      "\u001b[34mHow are you today?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mI'm feeling good too\u001b[0m\n",
+      "\u001b[34mWhat's your favourite color?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " red\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mYour like red ? I like indigo\u001b[0m\n",
+      "\u001b[34mThrough recent upgrade I can do calculation now. Input some arithmetic expression to try, input 'q' 'x' 'quit' or 'exit' to quit:\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " x\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield(1)\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(GreetingBot())\n",
+    "garfield.add(FavouriteColorBot())\n",
+    "garfield.add(CalcBot('looped'))\n",
+    "garfield.run()"
    ]
   },
   {
